--- a/style.css
+++ b/style.css
@@ -3,4 +3,124 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css");
 
 
+/* Remove as margens do site*/
+*{
 
+margin: 0;
+padding: 0;
+
+}
+
+header {
+
+width: 100%;   
+height: 100vh;
+overflow: hidden;
+position: relative;
+
+}
+
+
+.img-wrapper {
+
+width: 100%;   
+height: 100%;
+overflow: hidden;
+background-color: black;
+
+}
+
+.img-wrapper img {
+ width: 100%;   
+ height: 100;
+ object-fit: cover;
+ opacity: 0.5;   /* transparencia */
+ animation: zoom 25s; /* Chamando a animação do zoom do keyframes */
+
+}
+
+.banner {
+position: absolute;
+top: 30%;  /* Altura da letra */
+left: 15%;  /* Letra para a esquerda */
+
+}
+
+.banner h1 {
+
+color: #ffffff;
+font-size: 3.5rem;
+font-family: "Baloo Da 2", serif;
+font-weight: 200;
+text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
+line-height: 3.5rem;
+margin-bottom: 2rem;
+opacity: 0;
+animation: moveBanner 1s 0.5s forwards;  /* Chamado a animação do titulo */
+
+}
+
+.banner p {
+
+font-family: "Josefin Slab", serif;  /* fonte escolhida */
+color: #fff;
+font-size: 2rem;
+text-shadow: .2rem 2rem 2px rgba (0, 0, 0, .4);
+margin-bottom: 2rem; /* Margem do botão */
+opacity: 0;
+animation: moveBanner 1s 0.7s forwards;  /* Chamado a animação do titulo */
+
+
+}
+
+.banner button {
+font-family: "Mulish", serif; /* fonte escolhida */
+color: #fff;
+text-transform: uppercase; /* Transforma em letra maiuscula */
+background: #ef32d9; 
+background: -webkit-linear-gradient(to right, #ef32d9, #89fffd); 
+background: linear-gradient(to right, #ef32d9, #89fffd); 
+padding: 1rem 3rem ; /* Altura e largura */
+border: none;  /* Nenhuma borda */
+cursor: pointer;  /* Ponteiro do cursor, deixar interativo */
+opacity: 0;
+animation: moveBanner 1s 0.9s forwards;  /* Chamado a animação do titulo */
+
+
+}
+/* Evento no botão */
+.banner button:hover {
+    opacity: 0.8; /* Animação no botão que escurece quando vc aproxima o mouse */
+
+}
+
+/* Criação de um keyframes */
+
+@keyframes zoom {
+0%{
+transform: scale(1.3); /* Porcentagem do zoom */
+
+}
+100%{
+
+    transform: scale(1); /* Porcentagem do zoom no final*/
+}
+
+
+}
+
+/* Animação das letras do Banner */
+@keyframes moveBanner {
+0%{
+transform: translateY(10rem) rotateY(-30deg); /* Fazer com que as letras desçam e virando */
+
+}
+ 
+100% {
+transform: translateY(0) rotateY(0);  /* Animação até o final*/
+opacity: 1;
+}
+
+
+
+}
