--- a/style.css
+++ b/style.css
@@ -8,8 +8,113 @@
 
 margin: 0;
 padding: 0;
+list-style: none;  /* Retira os pontos dos li */
+text-decoration: none; /*Retira os sublinhados dos nomes */
 
 }
+
+:root {
+--font-primary: "Baloo Da 20", serif;   /* Criando variaveis, fontes primarias */
+--font-secundary: "Josefin Slab", serif; /* Criando variaveis, fontes secundarias */
+--font-action: "Mulish", serif;  /* Criando variaveis,fonte de ação que vai ser usada nos links, nos botões, tudo que for uma ação iremos ultilizar*/
+
+
+}
+
+
+
+.menu1 {
+
+
+width: 2rem;  /* Largura */
+height: 2rem;  /* Altura */
+position: fixed;  /* Posição fixa do menu */
+z-index: 100 ;    /* Aumentar  para que fique na frente dos elementos */
+right: 2rem; /* Bordar direita */
+top: 2rem;  /* Topo */
+display: flex;
+flex-direction: column;
+justify-content: space-evenly ;
+cursor: pointer;
+
+}
+.show-menu .menu1 {
+
+right: 17rem;  /* Animação dentro do js para os traços do menu fiquem dentro da barra de menu */
+
+}
+
+/* A classe que representa a linha */
+.line {
+
+width: 100%;  /* Largura da line */
+height: .1rem;
+background-color: #fff;
+box-shadow: 0.1rem 0.1rem 1px #000;
+cursor: pointer;  /* Deixando o elemento interativo */
+transition: transform 1s;  /* Transformação de trasição de 1 segundo no menu para ele ficar suave */
+}
+
+
+
+/* A linha de cima e a de baixo de um giro e forme um x */
+.show-menu #line1 {
+transform: rotate(45deg) translate(.3rem, .45rem);
+}
+
+
+
+/* Quando a linha 1 tiver sendo selecionada a linha 2 fique oculta */
+.show-menu #line2 {
+
+opacity: 0;       /* Opacitade 0 */
+visibility: hidden;  /* Vizibilidade oculta */
+
+}
+
+.show-menu #line3 {
+
+    transform: rotate(-45deg) translate(.3rem, -.45rem);
+    
+    }
+
+.menu1 span {
+
+position: absolute;
+left: 3rem;
+height: 2rem;  /* Altura */
+width: 6rem;    /* Largura */
+display: flex;   /* Para centralizar o texto */
+justify-content: center;  /* Tanto na vertical */
+align-items: center;    /* Quanto na horizontal */
+background-color: #a044ff;
+color: #ffffff;
+font-family: var(--font-action);
+opacity: 0;
+
+}    
+
+.menu1 span::before {
+
+content: "";  /* Elemento que nao tem conteúdo */
+position: absolute; /* Esse elemento vai ter uma posição absoluta */
+border-right: .5rem solid #a044ff;
+border-top: .5rem solid transparent;
+border-left: .5rem solid transparent;
+border-bottom: .5rem solid transparent;
+left: -1rem;
+
+}
+
+.show-menu .menu1:hover span{
+    opacity: 1;
+
+
+
+}
+
+
+
 
 header {
 
@@ -50,7 +155,7 @@ left: 15%;  /* Letra para a esquerda */
 
 color: #ffffff;
 font-size: 3.5rem;
-font-family: "Baloo Da 2", serif;
+font-family: var(--font-primary);
 font-weight: 200;
 text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
 line-height: 3.5rem;
@@ -62,7 +167,7 @@ animation: moveBanner 1s 0.5s forwards;  /* Chamado a animação do titulo */
 
 .banner p {
 
-font-family: "Josefin Slab", serif;  /* fonte escolhida */
+font-family: var(--font-secundary);  /* fonte escolhida */
 color: #fff;
 font-size: 2rem;
 text-shadow: .2rem 2rem 2px rgba (0, 0, 0, .4);
@@ -74,7 +179,7 @@ animation: moveBanner 1s 0.7s forwards;  /* Chamado a animação do titulo */
 }
 
 .banner button {
-font-family: "Mulish", serif; /* fonte escolhida */
+font-family: var(--font-action); /* fonte escolhida */
 color: #fff;
 text-transform: uppercase; /* Transforma em letra maiuscula */
 background: #ef32d9; 
@@ -120,7 +225,86 @@ transform: translateY(10rem) rotateY(-30deg); /* Fazer com que as letras desçam
 transform: translateY(0) rotateY(0);  /* Animação até o final*/
 opacity: 1;
 }
+}
+
+
+.sidebar {
+width: 20rem; /* Largura */
+height: 100vh; /* Altura, tamanho exato da tela */
+background-color: #fff;
+position: fixed;  /* Posição fixada */
+top: 0;  /* Topo do menu, vai sempre está encima independente da posição da tela*/
+right: -20rem; /* Vai sempre estar a esquerda independete da posição da tela e no js joga para fora da tela*/
+transition: all 1s;  /* Animação de entrada de menu  no js */
+
+
+}
+
+.show-menu  .sidebar {
+right: 0; /* posição no js apartir da direita vai ser 0 */
+
+
+}
+
+
+.menu2 {
+   
+position: absolute;
+top: 40%;   /* Afasta 40% do topo */
+left: 50%;  /* Afasta 50% da esquerda */
+transform: translate(-50%, -50%);
+
+}
+
+.menu-item {
+
+text-align: center;  /* Deixar o texto  li centralizado */
+margin-bottom: .5rem; /* Espaçamento das letras do menu */
 
 
 
 }
+
+.menu-link {
+font-family: var(--font-action); /* Acionando a fonte da variável */
+font-size: 2rem;   /* Ajustando o tamanho da font */
+color: #555;
+transition: color 1s;  /* Sempre que mudar a mesma vai mudar 1 segundo pra trocar de cor */
+
+}
+
+/* Efeito hover para uma animação de interação no menu */
+.menu-link:hover {
+    color: #6a3093;  /* Quando aproximar o mouse, a letra muda de cor */
+}
+
+.social-media {
+    background-color: rgba(255, 0, 0, .5); /* Background por cima das redes sociais */
+    position: absolute;  /* Posição das redes sociais ficando absoluta */
+    bottom: 2rem;    /* Jogando os icones para baixo apartir do bottom */
+    width: 100%;     /* Largura */
+    display: flex;   /* Distribuindo os icones pela linha */
+    justify-content: space-evenly;     /*  Coloca uma qualidade de espaço entre eles */
+
+}
+
+.social-media i {
+
+color: #555;
+height: 2.5rem;  /* Altura */
+width: 2.5rem;   /* Largura */
+font-size: 2.5rem; /* Aumentando o tamanho os icones das redes sociais */
+display: flex;    /* Distribuindo as redes sociais pela linha */
+justify-content: center;  /* Alinhando os icones das redes sociais no centro */
+align-items: center;   /* Alinhando os icones das redes sociais */
+border-radius: 50%;
+transition: background-color 1s;
+}
+
+.social-media i:hover {
+background-color: #a044ff;
+
+
+}
+
+
