--- a/style.css
+++ b/style.css
@@ -308,5 +308,61 @@ background-color: #a044ff;
 
 }
 
+.conhecimentos {
+display: grid;
+grid-template-columns: repeat(16, 1fr); /* Criando 16 colunas no elemento CONHECIMENTOS */
+grid-template-rows: repeat(6, 6rem);    /* Criando e repetindo 6 linhas com altura de 6 */
 
->>>>>>> cc8375130355101976e76125cffc43670e865453
+}
+
+.conhecimento:nth-child(1) {
+grid-column: 4 / 7;  /* Vai começar na coluna 4 e terminar na coluna 7 */
+grid-row: 1 / 3;     /* Vai começar na linha 1 e vai terminar na linha 3 */
+
+}
+
+.conhecimento:nth-child(2) {
+grid-column: 3 / 6;  /* Vai começar na coluna 3 e terminar na coluna 6 */
+grid-row: 3 / 5;     /* Vai começar na linha 3 e vai terminar na linha 5 */
+    
+ }
+
+.conhecimento:nth-child(3) {
+ grid-column: 4 / 7;  /* Vai começar na coluna 4 e terminar na coluna 7 */
+ grid-row: 5 / -1;     /* Vai começar na linha 5 e vai terminar na linha -1 */
+        
+}   
+
+.conhecimento:nth-child(4) {
+grid-column: 11 / 14;  /* Vai começar na coluna 11 e terminar na coluna 14 */
+grid-row: 1 / 3;     /* Vai começar na linha 1 e vai terminar na linha 3 */
+    
+ }
+ .conhecimento:nth-child(5) {
+grid-column: 12 / 15;  /* Vai começar na coluna 12 e terminar na coluna 15 */
+grid-row: 3 / 5;     /* Vai começar na linha 3 e vai terminar na linha 5 */
+    
+}
+
+.conhecimento:nth-child(6) {
+grid-column: 11 / 14;  /* Vai começar na coluna 11 e terminar na coluna 14 */
+grid-row: 5 / -1;     /* Vai começar na linha 5 e vai terminar na linha -1 */
+    
+}
+
+.sessao-header {
+display: flex;
+align-items: center;  /* Alinhamentos vertical */
+justify-content: center;  /* Alinhamento horizontal */
+
+
+}
+
+.sessao-header h1 {
+font-family: var(--font-primary);
+font-size: 3rem;
+color: #4b4b4b ;
+
+
+
+}
