--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@ background-color: #a044ff;
 }
 
 .conhecimentos {
+margin-top: 4%;    
 display: grid;
 grid-template-columns: repeat(16, 1fr); /* Criando 16 colunas no elemento CONHECIMENTOS */
 grid-template-rows: repeat(6, 6rem);    /* Criando e repetindo 6 linhas com altura de 6 */
@@ -316,7 +317,7 @@ grid-template-rows: repeat(6, 6rem);    /* Criando e repetindo 6 linhas com altu
 }
 
 .conhecimento:nth-child(1) {
-grid-column: 4 / 7;  /* Vai começar na coluna 4 e terminar na coluna 7 */
+grid-column: 3 / 7;  /* Vai começar na coluna 4 e terminar na coluna 7 */
 grid-row: 1 / 3;     /* Vai começar na linha 1 e vai terminar na linha 3 */
 
 }
@@ -328,7 +329,7 @@ grid-row: 3 / 5;     /* Vai começar na linha 3 e vai terminar na linha 5 */
  }
 
 .conhecimento:nth-child(3) {
- grid-column: 4 / 7;  /* Vai começar na coluna 4 e terminar na coluna 7 */
+ grid-column: 3 / 7;  /* Vai começar na coluna 4 e terminar na coluna 7 */
  grid-row: 5 / -1;     /* Vai começar na linha 5 e vai terminar na linha -1 */
         
 }   
@@ -339,7 +340,7 @@ grid-row: 1 / 3;     /* Vai começar na linha 1 e vai terminar na linha 3 */
     
  }
  .conhecimento:nth-child(5) {
-grid-column: 12 / 15;  /* Vai começar na coluna 12 e terminar na coluna 15 */
+grid-column: 11 / 14;  /* Vai começar na coluna 12 e terminar na coluna 15 */
 grid-row: 3 / 5;     /* Vai começar na linha 3 e vai terminar na linha 5 */
     
 }
@@ -350,6 +351,13 @@ grid-row: 5 / -1;     /* Vai começar na linha 5 e vai terminar na linha -1 */
     
 }
 
+.sessao-conhecimentos {
+background-color: #f5f5f5 ;  /* Cor de fundo do elementos CONHECIMENTOS */
+ 
+}
+
+
+
 .sessao-header {
 display: flex;
 align-items: center;  /* Alinhamentos vertical */
@@ -359,10 +367,95 @@ justify-content: center;  /* Alinhamento horizontal */
 }
 
 .sessao-header h1 {
-font-family: var(--font-primary);
-font-size: 3rem;
-color: #4b4b4b ;
+font-family: var(--font-primary);  /* Fonte de h1 */
+font-size: 3rem;  /* Tamanho da Fonte do h1 */
+margin-top: 5%;
+color: #4b4b4b ;   /* cor do h1 */
+border-bottom: solid 3px #6a3093;  /* Borda do h1 */
+margin-bottom: 1.3rem;  /* Espaçamento de linhas do h1 */
 
+}
+
+.conhecimento-header {
+display: flex; /* Faz com que fique um ao lado do outro */
+align-items: center;
+color: #4b4b4b;
+}
+
+.conhecimento-header i {
+font-size: 2.5rem;   /* Tamanho da fonte do icone */
+
+
+}
+
+.conhecimento-header h3 {
+font-family: var(--font-secundary);   /* Estilo da fonte do h3 */
+font-size: 2rem; /* Tamanho da fonte do h3 */
+padding-left: 1rem; /* Espaçamento do lado esquerdo */
+}
+
+.conhecimento-text {
+font-family: var(--font-secundary); /* Estilo da fonte do texto */
+
+}
+
+.conhecimento-img-wrapper {
+grid-column: 7 / 11;  /* centralizando a imagem entre os textos do elemento CONHECIMENTO  imagem 1*/
+grid-row: 3 / 6;      /* Centralizando mais para baixo */
+width: 100%;
+}
+
+.conhecimento-img-wrapper2 {
+   
+grid-column: 7 / 11;  /* centralizando a imagem entre os textos do elemento CONHECIMENTO imagem 2 */
+
+}
+
+.conhecimento-img-wrapper3 {
+grid-column: 7 / 11;    /* centralizando a imagem entre os textos do elemento CONHECIMENTO  imagem 3*/
+grid-row: 5 / 6;        /* Centralizando mais para baixo */
+
+}
+
+.projetos {
+display: flex;
+justify-content: space-evenly;
+margin-top: 02rem;
+
+
+}
+.card {
+    width: 18rem;
+    height: 30rem;
+    position: relative;
+    
+}
+
+.card-img-wrapper {
+width: 100%;
+height: 100%;
+
+
+
+}
+
+.card-img-wrapper img {
+object-fit: cover;
+width: 100%;
+height: 100%;
+ border-radius: 5rem; 
+opacity: .8;
+
+
+}
+.card-info {
+
+font-family: var(--font-secundary);  /* Estilo da fonte do elemento Card */
+margin-top: 1.5rem;    /* Espaço de uma margem */
+position: absolute;
+padding: 2rem;
+bottom: 0;
+text-shadow: 0.0.1rem 0.3rem rgba(0, 0, 0, rgba(0, 0, 0, .4)
 
 
 }
