--- a/style.css
+++ b/style.css
@@ -6,27 +6,20 @@
 
 /* Remove as margens do site*/
 *{
-
 margin: 0;
 padding: 0;
 list-style: none;  /* Retira os pontos dos li */
 text-decoration: none; /*Retira os sublinhados dos nomes */
-
 }
 
 :root {
 --font-primary: "Baloo Da 20", serif;   /* Criando variaveis, fontes primarias */
 --font-secundary: "Josefin Slab", serif; /* Criando variaveis, fontes secundarias */
 --font-action: "Mulish", serif;  /* Criando variaveis,fonte de ação que vai ser usada nos links, nos botões, tudo que for uma ação iremos ultilizar*/
-
-
 }
 
 
-
 .menu1 {
-
-
 width: 2rem;  /* Largura */
 height: 2rem;  /* Altura */
 position: fixed;  /* Posição fixa do menu */
@@ -37,17 +30,14 @@ display: flex;
 flex-direction: column;
 justify-content: space-evenly ;
 cursor: pointer;
-
 }
+
 .show-menu .menu1 {
-
 right: 17rem;  /* Animação dentro do js para os traços do menu fiquem dentro da barra de menu */
-
 }
 
 /* A classe que representa a linha */
 .line {
-
 width: 100%;  /* Largura da line */
 height: .1rem;
 background-color: #fff;
@@ -57,30 +47,22 @@ transition: transform 1s;  /* Transformação de trasição de 1 segundo no menu
 }
 
 
-
 /* A linha de cima e a de baixo de um giro e forme um x */
 .show-menu #line1 {
 transform: rotate(45deg) translate(.3rem, .45rem);
 }
 
-
-
 /* Quando a linha 1 tiver sendo selecionada a linha 2 fique oculta */
 .show-menu #line2 {
-
 opacity: 0;       /* Opacitade 0 */
 visibility: hidden;  /* Vizibilidade oculta */
-
 }
 
 .show-menu #line3 {
-
-    transform: rotate(-45deg) translate(.3rem, -.45rem);
-    
-    }
+transform: rotate(-45deg) translate(.3rem, -.45rem);
+}
 
 .menu1 span {
-
 position: absolute;
 left: 3rem;
 height: 2rem;  /* Altura */
@@ -92,11 +74,9 @@ background-color: #a044ff;
 color: #ffffff;
 font-family: var(--font-action);
 opacity: 0;
-
 }    
 
 .menu1 span::before {
-
 content: "";  /* Elemento que nao tem conteúdo */
 position: absolute; /* Esse elemento vai ter uma posição absoluta */
 border-right: .5rem solid #a044ff;
@@ -104,36 +84,25 @@ border-top: .5rem solid transparent;
 border-left: .5rem solid transparent;
 border-bottom: .5rem solid transparent;
 left: -1rem;
-
 }
 
 .show-menu .menu1:hover span{
     opacity: 1;
-
-
-
 }
 
-
-
-
 header {
-
 width: 100%;   
 height: 100vh;
 overflow: hidden;
 position: relative;
-
 }
 
 
 .img-wrapper {
-
 width: 100%;   
 height: 100%;
 overflow: hidden;
 background-color: black;
-
 }
 
 .img-wrapper img {
@@ -142,18 +111,15 @@ background-color: black;
  object-fit: cover;
  opacity: 0.5;   /* transparencia */
  animation: zoom 25s; /* Chamando a animação do zoom do keyframes */
-
 }
 
 .banner {
 position: absolute;
 top: 30%;  /* Altura da letra */
 left: 15%;  /* Letra para a esquerda */
-
 }
 
 .banner h1 {
-
 color: #ffffff;
 font-size: 3.5rem;
 font-family: var(--font-primary);
@@ -163,11 +129,9 @@ line-height: 3.5rem;
 margin-bottom: 2rem;
 opacity: 0;
 animation: moveBanner 1s 0.5s forwards;  /* Chamado a animação do titulo */
-
 }
 
 .banner p {
-
 font-family: var(--font-secundary);  /* fonte escolhida */
 color: #fff;
 font-size: 2rem;
@@ -175,8 +139,6 @@ text-shadow: .2rem 2rem 2px rgba (0, 0, 0, .4);
 margin-bottom: 2rem; /* Margem do botão */
 opacity: 0;
 animation: moveBanner 1s 0.7s forwards;  /* Chamado a animação do titulo */
-
-
 }
 
 .banner button {
@@ -191,13 +153,11 @@ border: none;  /* Nenhuma borda */
 cursor: pointer;  /* Ponteiro do cursor, deixar interativo */
 opacity: 0;
 animation: moveBanner 1s 0.9s forwards;  /* Chamado a animação do titulo */
-
-
 }
+
 /* Evento no botão */
 .banner button:hover {
     opacity: 0.8; /* Animação no botão que escurece quando vc aproxima o mouse */
-
 }
 
 /* Criação de um keyframes */
@@ -211,8 +171,6 @@ transform: scale(1.3); /* Porcentagem do zoom */
 
     transform: scale(1); /* Porcentagem do zoom no final*/
 }
-
-
 }
 
 /* Animação das letras do Banner */
@@ -237,33 +195,22 @@ position: fixed;  /* Posição fixada */
 top: 0;  /* Topo do menu, vai sempre está encima independente da posição da tela*/
 right: -20rem; /* Vai sempre estar a esquerda independete da posição da tela e no js joga para fora da tela*/
 transition: all 1s;  /* Animação de entrada de menu  no js */
-
-
 }
 
 .show-menu  .sidebar {
 right: 0; /* posição no js apartir da direita vai ser 0 */
-
-
 }
 
-
 .menu2 {
-   
 position: absolute;
 top: 40%;   /* Afasta 40% do topo */
 left: 50%;  /* Afasta 50% da esquerda */
 transform: translate(-50%, -50%);
-
 }
 
 .menu-item {
-
 text-align: center;  /* Deixar o texto  li centralizado */
 margin-bottom: .5rem; /* Espaçamento das letras do menu */
-
-
-
 }
 
 .menu-link {
@@ -271,7 +218,6 @@ font-family: var(--font-action); /* Acionando a fonte da variável */
 font-size: 2rem;   /* Ajustando o tamanho da font */
 color: #555;
 transition: color 1s;  /* Sempre que mudar a mesma vai mudar 1 segundo pra trocar de cor */
-
 }
 
 /* Efeito hover para uma animação de interação no menu */
@@ -286,11 +232,9 @@ transition: color 1s;  /* Sempre que mudar a mesma vai mudar 1 segundo pra troca
     width: 100%;     /* Largura */
     display: flex;   /* Distribuindo os icones pela linha */
     justify-content: space-evenly;     /*  Coloca uma qualidade de espaço entre eles */
-
 }
 
 .social-media i {
-
 color: #555;
 height: 2.5rem;  /* Altura */
 width: 2.5rem;   /* Largura */
@@ -304,8 +248,6 @@ transition: background-color 1s;
 
 .social-media i:hover {
 background-color: #a044ff;
-
-
 }
 
 .conhecimentos {
@@ -313,47 +255,40 @@ margin-top: 4%;
 display: grid;
 grid-template-columns: repeat(16, 1fr); /* Criando 16 colunas no elemento CONHECIMENTOS */
 grid-template-rows: repeat(6, 6rem);    /* Criando e repetindo 6 linhas com altura de 6 */
-
 }
 
 .conhecimento:nth-child(1) {
 grid-column: 3 / 7;  /* Vai começar na coluna 4 e terminar na coluna 7 */
 grid-row: 1 / 3;     /* Vai começar na linha 1 e vai terminar na linha 3 */
-
 }
 
 .conhecimento:nth-child(2) {
 grid-column: 3 / 6;  /* Vai começar na coluna 3 e terminar na coluna 6 */
 grid-row: 3 / 5;     /* Vai começar na linha 3 e vai terminar na linha 5 */
-    
- }
+}
 
 .conhecimento:nth-child(3) {
  grid-column: 3 / 7;  /* Vai começar na coluna 4 e terminar na coluna 7 */
  grid-row: 5 / -1;     /* Vai começar na linha 5 e vai terminar na linha -1 */
-        
 }   
 
 .conhecimento:nth-child(4) {
 grid-column: 11 / 14;  /* Vai começar na coluna 11 e terminar na coluna 14 */
 grid-row: 1 / 3;     /* Vai começar na linha 1 e vai terminar na linha 3 */
-    
- }
- .conhecimento:nth-child(5) {
+}
+ 
+.conhecimento:nth-child(5) {
 grid-column: 11 / 14;  /* Vai começar na coluna 12 e terminar na coluna 15 */
 grid-row: 3 / 5;     /* Vai começar na linha 3 e vai terminar na linha 5 */
-    
 }
 
 .conhecimento:nth-child(6) {
 grid-column: 11 / 14;  /* Vai começar na coluna 11 e terminar na coluna 14 */
 grid-row: 5 / -1;     /* Vai começar na linha 5 e vai terminar na linha -1 */
-    
 }
 
 .sessao-conhecimentos {
 background-color: #f5f5f5 ;  /* Cor de fundo do elementos CONHECIMENTOS */
- 
 }
 
 
@@ -362,8 +297,6 @@ background-color: #f5f5f5 ;  /* Cor de fundo do elementos CONHECIMENTOS */
 display: flex;
 align-items: center;  /* Alinhamentos vertical */
 justify-content: center;  /* Alinhamento horizontal */
-
-
 }
 
 .sessao-header h1 {
@@ -373,7 +306,6 @@ margin-top: 5%;
 color: #4b4b4b ;   /* cor do h1 */
 border-bottom: solid 3px #6a3093;  /* Borda do h1 */
 margin-bottom: 1.3rem;  /* Espaçamento de linhas do h1 */
-
 }
 
 .conhecimento-header {
@@ -384,8 +316,6 @@ color: #4b4b4b;
 
 .conhecimento-header i {
 font-size: 2.5rem;   /* Tamanho da fonte do icone */
-
-
 }
 
 .conhecimento-header h3 {
@@ -396,7 +326,6 @@ padding-left: 1rem; /* Espaçamento do lado esquerdo */
 
 .conhecimento-text {
 font-family: var(--font-secundary); /* Estilo da fonte do texto */
-
 }
 
 .conhecimento-img-wrapper {
@@ -408,54 +337,91 @@ width: 100%;
 .conhecimento-img-wrapper2 {
    
 grid-column: 7 / 11;  /* centralizando a imagem entre os textos do elemento CONHECIMENTO imagem 2 */
-
 }
 
 .conhecimento-img-wrapper3 {
 grid-column: 7 / 11;    /* centralizando a imagem entre os textos do elemento CONHECIMENTO  imagem 3*/
 grid-row: 5 / 6;        /* Centralizando mais para baixo */
-
 }
 
 .projetos {
 display: flex;
 justify-content: space-evenly;
 margin-top: 02rem;
-
-
 }
+
 .card {
-    width: 18rem;
-    height: 30rem;
+    width: 15rem;
+    height: 29rem;
     position: relative;
-    
 }
 
 .card-img-wrapper {
 width: 100%;
 height: 100%;
-
-
-
+background-color: #262626;
+border-radius: .5rem;
 }
 
 .card-img-wrapper img {
 object-fit: cover;
 width: 100%;
 height: 100%;
- border-radius: 5rem; 
-opacity: .8;
+border-radius: .5rem;
+opacity: 0.50;
+}
 
+.card-info h2{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500;
+    color: #eee;
+}
+
+.card-info p {
+font-family: var(--font-secundary);
+font-weight: bolder;  /* Adiciona bastante peso na fonte pra ela aparecer bem */
+font-size: 1.2rem;
+width: 100%;  /* Comprimento da fonte do elemente Card */
+color: #eee;
+opacity: 0.80;
+margin-bottom: 1rem;
+}
+
+.card-info button {   
+font-family: var(--font-action);    /* Estilo da font do elemento button */
+width: 6rem;    /* Comprimento do elemento botão */
+height: 2.1rem;   /* Largura do elemento botão */
+background: #ef32d9;   /* Cor do elemento botão */
+background: -webkit-linear-gradient(to right, #ef32d9, #89fffd);  /* Cor do elemento botão */
+background: linear-gradient(to right, #ef32d9, #89fffd);   /* Cor do elemento botão */
+color: #eee;
+text-transform: uppercase;
+border-radius: none;
 
 }
-.card-info {
 
+.card:hover .card-info{
+bottom: 2rem;
+opacity: 1;
+visibility: visible;
+
+}
+
+.card-info {
+opacity: 0;
 font-family: var(--font-secundary);  /* Estilo da fonte do elemento Card */
 margin-top: 1.5rem;    /* Espaço de uma margem */
 position: absolute;
-padding: 2rem;
+padding: 2rem;  /* Afastando um pouco da direita */
 bottom: 0;
-text-shadow: 0.0.1rem 0.3rem rgba(0, 0, 0, rgba(0, 0, 0, .4)
-
-
+transition: all .3s; /* Efeito das letras aparecendo e subindo dentro do elemento card */
+visibility: hidden;
+text-shadow: 0.0.1rem 0.3rem rgba(0, 0, 0, rgba(0, 0, 0, .4) /* Colocando uma sombra nas letras do elemento card */
 }
+
+
+
+
+
+
