--- a/style1.css
+++ b/style1.css
@@ -17,6 +17,10 @@ text-decoration: none; /*Retira os sublinhados dos nomes */
 --font-action: "Mulish", serif;  /* Criando variaveis,fonte de ação que vai ser usada nos links, nos botões, tudo que for uma ação iremos ultilizar*/
 }
 
+html {
+    scroll-behavior: smooth; /* o scrool da barra de rolagem fica mais suave */
+}
+
 
 .menu1 {
 width: 2rem;  /* Largura */
@@ -293,6 +297,7 @@ background-color: #f5f5f5 ;  /* Cor de fundo do elementos CONHECIMENTOS */
 
 
 .sessao-header {
+height: 8rem; /* Altura do sobre para os cards */
 display: flex;
 align-items: center;  /* Alinhamentos vertical */
 justify-content: center;  /* Alinhamento horizontal */
@@ -346,10 +351,11 @@ grid-row: 5 / 6;        /* Centralizando mais para baixo */
 .projetos {
 display: flex;
 justify-content: space-evenly;
-margin-top: 02rem;
+margin-top: 0.8rem;
 }
 
 .card {
+    
     width: 15rem;
     height: 27rem;
     position: relative;
@@ -423,7 +429,7 @@ justify-content: center;  /* Justificar os conteúdos no centro */
 /* Continuação do formulário de contato */
 .contato-wrapper {
 width: 87%;
-height: 30rem;
+height: 35rem;
 display: flex;  /* Fica um elemento do lado do outo */
 }
 
@@ -440,7 +446,7 @@ display: flex;  /* Fica um elemento do lado do outo */
 .contato-right {    
     
 width: 75%;
-height: 59%;
+height: 64%;
 background-color: #eee;
 padding: 3rem  10rem 10rem;  /* Espaço entre as margens 3rem encima e 10rem em cada lado */
 }
@@ -495,7 +501,7 @@ max-height: 3rem;  /* Altura maxima de 3 linhas */
 .field-label {
 position: absolute;
 left: 0;
-top: 3rem;
+top: 1rem; /* Distancia do nome do formulario para os tracinhos do formulario */
 font-family: var(--font-secundary);
 text-transform: uppercase;
 font-size: 1.2rem;
@@ -612,7 +618,7 @@ padding: 0.3rem;      /* Espaçamento dos números dentro da caixa */
 
 footer {
 width: 100%;  /* Largura de 100% do footer */
-height: 7rem;     /* Altura de 10 */
+height: 10rem;     /* Altura de 10 */
 background-color: #17181b;  /* Cor de fundo do footer */
 display: flex;  /* Posicionando os elementos */
 justify-content: center;  /* Alinhar todos eles  tanto na horizontal*/
@@ -640,6 +646,7 @@ font-size: 1.3rem;
 display: flex;  /* Posicionando os elementos */
 
  }
+
 
  #link-topo {
 position: fixed; /* Posição fixa , vai aparecer sempre na página */
